--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -1138,7 +1138,7 @@
                                 <rect key="frame" x="10" y="20" width="580" height="560"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="F26-Jd-bXK" customClass="CLCommentTableView">
-                                        <rect key="frame" x="0.0" y="40" width="580" height="480"/>
+                                        <rect key="frame" x="0.0" y="40" width="580" height="469"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" id="RW2-nf-Jte" customClass="CLCommentCell">
@@ -1209,27 +1209,76 @@
                                             <outlet property="delegate" destination="XFn-1X-MTq" id="3kH-vw-7Hr"/>
                                         </connections>
                                     </tableView>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ujs-Pu-csc">
+                                        <rect key="frame" x="198" y="522" width="184" height="30"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="184" id="o9w-ea-0jl"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ubu-lm-iN7">
+                                        <rect key="frame" x="0.0" y="510" width="580" height="1"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <rect key="contentStretch" x="0.0" y="0.0" width="0.49999999999999961" height="1"/>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vv4-KX-rMc">
+                                        <rect key="frame" x="390" y="522" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="gd0-Kq-g2U"/>
+                                            <constraint firstAttribute="width" constant="46" id="yPl-e5-jgq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal" title="Send">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTX-5F-AEJ">
+                                        <rect key="frame" x="154" y="522" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="xzz-9P-sqy"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="Camera">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.95686274510000002" blue="0.0054740344939999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="top" constant="40" id="9Zt-8t-tiY"/>
-                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="KzV-I9-WMM"/>
-                                    <constraint firstAttribute="trailing" secondItem="F26-Jd-bXK" secondAttribute="trailing" id="M8R-Yc-4Vp"/>
-                                    <constraint firstAttribute="bottom" secondItem="F26-Jd-bXK" secondAttribute="bottom" constant="40" id="R4r-Zu-fV0"/>
+                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="top" constant="40" id="0CS-ew-RUS"/>
+                                    <constraint firstItem="ujs-Pu-csc" firstAttribute="top" secondItem="F26-Jd-bXK" secondAttribute="bottom" constant="13" id="3Wh-KO-BxH"/>
+                                    <constraint firstItem="ujs-Pu-csc" firstAttribute="bottom" secondItem="nGb-nD-iZ7" secondAttribute="bottomMargin" id="AKP-sb-Cze"/>
+                                    <constraint firstItem="ujs-Pu-csc" firstAttribute="centerX" secondItem="F26-Jd-bXK" secondAttribute="centerX" id="Bk6-pU-lKo"/>
+                                    <constraint firstItem="sTX-5F-AEJ" firstAttribute="top" secondItem="ujs-Pu-csc" secondAttribute="top" id="CtP-cO-HAK"/>
+                                    <constraint firstItem="sTX-5F-AEJ" firstAttribute="bottom" secondItem="Vv4-KX-rMc" secondAttribute="bottom" id="EKn-RR-Jxo"/>
+                                    <constraint firstItem="Vv4-KX-rMc" firstAttribute="leading" secondItem="ujs-Pu-csc" secondAttribute="trailing" constant="8" symbolic="YES" id="Ebf-F3-7BP"/>
+                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="ExV-Bl-3Tg"/>
+                                    <constraint firstItem="sTX-5F-AEJ" firstAttribute="top" secondItem="ubu-lm-iN7" secondAttribute="bottom" constant="11" id="Oz5-cg-2jX"/>
+                                    <constraint firstItem="ujs-Pu-csc" firstAttribute="leading" secondItem="sTX-5F-AEJ" secondAttribute="trailing" constant="14" id="cHS-5v-hNg"/>
+                                    <constraint firstItem="ubu-lm-iN7" firstAttribute="leading" secondItem="F26-Jd-bXK" secondAttribute="leading" id="e6I-bo-xwl"/>
+                                    <constraint firstItem="ubu-lm-iN7" firstAttribute="top" secondItem="F26-Jd-bXK" secondAttribute="bottom" constant="1" id="fSO-mW-gc3"/>
+                                    <constraint firstItem="ubu-lm-iN7" firstAttribute="trailing" secondItem="F26-Jd-bXK" secondAttribute="trailing" id="iLC-3g-0j8"/>
+                                    <constraint firstItem="Vv4-KX-rMc" firstAttribute="top" secondItem="ujs-Pu-csc" secondAttribute="top" id="nqE-1v-m4h"/>
+                                    <constraint firstAttribute="trailing" secondItem="F26-Jd-bXK" secondAttribute="trailing" id="xwL-Sd-LNj"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="nGb-nD-iZ7" secondAttribute="trailing" constant="-6" id="H3k-za-tjd"/>
-                            <constraint firstItem="qUi-OS-nZk" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="bottom" constant="20" id="VA1-nI-1mf"/>
-                            <constraint firstItem="nGb-nD-iZ7" firstAttribute="top" secondItem="ZFP-s0-oOE" secondAttribute="bottom" id="rky-hZ-5Td"/>
-                            <constraint firstItem="nGb-nD-iZ7" firstAttribute="leading" secondItem="CdM-Q0-Cjg" secondAttribute="leadingMargin" constant="-6" id="xt6-64-XW1"/>
+                            <constraint firstItem="qUi-OS-nZk" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="bottom" constant="20" id="3g3-uh-RTK"/>
+                            <constraint firstItem="nGb-nD-iZ7" firstAttribute="leading" secondItem="CdM-Q0-Cjg" secondAttribute="leadingMargin" constant="-6" id="8P4-yB-PYL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nGb-nD-iZ7" secondAttribute="trailing" constant="-6" id="ROY-px-RFm"/>
+                            <constraint firstItem="nGb-nD-iZ7" firstAttribute="top" secondItem="ZFP-s0-oOE" secondAttribute="bottom" id="X20-sD-Q36"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addImage" destination="sTX-5F-AEJ" id="7k1-lX-jVF"/>
+                        <outlet property="bottomBordrer" destination="ubu-lm-iN7" id="lDK-wF-jMJ"/>
                         <outlet property="mainView" destination="nGb-nD-iZ7" id="en5-uU-koV"/>
+                        <outlet property="send" destination="Vv4-KX-rMc" id="Vdf-j8-mys"/>
                         <outlet property="tableView" destination="F26-Jd-bXK" id="s6P-lp-wMj"/>
+                        <outlet property="textField" destination="ujs-Pu-csc" id="9kY-hL-k1H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vP0-zM-jwt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1240,5 +1289,6 @@
     <resources>
         <image name="TestImage" width="712" height="838"/>
         <image name="photo" width="128" height="128"/>
+        <image name="Camera" width="512" height="512"/>
     </resources>
 </document>
