--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -705,56 +705,71 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EQ0-Tp-yEG" customClass="CLEventDetail">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-J2-Nqf">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" red="0.33333333329999998" green="0.74117647060000003" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ak0-qC-MZk">
-                                <rect key="frame" x="10" y="355" width="202" height="44"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="nxs-mV-lXb">
-                                    <size key="itemSize" width="40" height="37"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectioCell" id="xRF-BM-IyY" customClass="CLEventCollectionCell">
-                                        <rect key="frame" x="0.0" y="3.5" width="42" height="37"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="40" height="37"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xRM-m8-NTZ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="34" height="34"/>
-                                                </imageView>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="xRM-m8-NTZ" firstAttribute="leading" secondItem="xRF-BM-IyY" secondAttribute="leading" id="6en-bN-Y6R"/>
-                                            <constraint firstItem="xRM-m8-NTZ" firstAttribute="top" secondItem="xRF-BM-IyY" secondAttribute="top" id="FXJ-ue-10T"/>
-                                            <constraint firstAttribute="trailing" secondItem="xRM-m8-NTZ" secondAttribute="trailing" constant="6" id="Lcu-vC-bGx"/>
-                                            <constraint firstAttribute="bottom" secondItem="xRM-m8-NTZ" secondAttribute="bottom" constant="3" id="ybE-i7-khL"/>
-                                        </constraints>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EQ0-Tp-yEG" customClass="CLEventDetail">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                        <color key="backgroundColor" red="0.33333333329999998" green="0.74117647060000003" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ak0-qC-MZk">
+                                        <rect key="frame" x="10" y="355" width="202" height="44"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="nxs-mV-lXb">
+                                            <size key="itemSize" width="40" height="37"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectioCell" id="xRF-BM-IyY" customClass="CLEventCollectionCell">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                    <rect key="frame" x="0.0" y="0.0" width="40" height="37"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xRM-m8-NTZ">
+                                                            <rect key="frame" x="0.0" y="0.0" width="34" height="34"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstItem="xRM-m8-NTZ" firstAttribute="leading" secondItem="xRF-BM-IyY" secondAttribute="leading" id="6en-bN-Y6R"/>
+                                                    <constraint firstItem="xRM-m8-NTZ" firstAttribute="top" secondItem="xRF-BM-IyY" secondAttribute="top" id="FXJ-ue-10T"/>
+                                                    <constraint firstAttribute="trailing" secondItem="xRM-m8-NTZ" secondAttribute="trailing" constant="6" id="Lcu-vC-bGx"/>
+                                                    <constraint firstAttribute="bottom" secondItem="xRM-m8-NTZ" secondAttribute="bottom" constant="3" id="ybE-i7-khL"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="memberImage" destination="xRM-m8-NTZ" id="3cS-BK-JsZ"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
                                         <connections>
-                                            <outlet property="memberImage" destination="xRM-m8-NTZ" id="3cS-BK-JsZ"/>
+                                            <outlet property="dataSource" destination="pTW-qw-EgO" id="8J8-o7-IKm"/>
+                                            <outlet property="delegate" destination="pTW-qw-EgO" id="stv-fb-dxH"/>
                                         </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="pTW-qw-EgO" id="8J8-o7-IKm"/>
-                                    <outlet property="delegate" destination="pTW-qw-EgO" id="stv-fb-dxH"/>
-                                </connections>
-                            </collectionView>
+                                    </collectionView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="EQ0-Tp-yEG" firstAttribute="leading" secondItem="3f4-J2-Nqf" secondAttribute="leading" id="6N7-sc-X9e"/>
+                                    <constraint firstAttribute="trailing" secondItem="EQ0-Tp-yEG" secondAttribute="trailing" id="B7U-pf-XGr"/>
+                                    <constraint firstAttribute="bottom" secondItem="EQ0-Tp-yEG" secondAttribute="bottom" id="Cla-9T-HIZ"/>
+                                    <constraint firstItem="EQ0-Tp-yEG" firstAttribute="top" secondItem="3f4-J2-Nqf" secondAttribute="top" id="L3B-97-PHA"/>
+                                    <constraint firstItem="EQ0-Tp-yEG" firstAttribute="centerX" secondItem="3f4-J2-Nqf" secondAttribute="centerX" id="PbN-aJ-Ze2"/>
+                                    <constraint firstItem="EQ0-Tp-yEG" firstAttribute="centerY" secondItem="3f4-J2-Nqf" secondAttribute="centerY" id="suG-AW-KPY"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="EQ0-Tp-yEG" firstAttribute="bottom" secondItem="Eco-FF-fWP" secondAttribute="top" id="WFx-1h-NCj"/>
-                            <constraint firstItem="EQ0-Tp-yEG" firstAttribute="leading" secondItem="47U-Se-1q7" secondAttribute="leading" id="bHo-oI-0Tm"/>
-                            <constraint firstAttribute="trailing" secondItem="EQ0-Tp-yEG" secondAttribute="trailing" id="nsd-s2-UPn"/>
-                            <constraint firstItem="EQ0-Tp-yEG" firstAttribute="top" secondItem="47U-Se-1q7" secondAttribute="top" id="sAi-ED-VHS"/>
+                            <constraint firstItem="3f4-J2-Nqf" firstAttribute="leading" secondItem="47U-Se-1q7" secondAttribute="leadingMargin" constant="-16" id="H7a-MB-E9w"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3f4-J2-Nqf" secondAttribute="trailing" constant="-16" id="bpg-uq-W6a"/>
+                            <constraint firstAttribute="width" secondItem="3f4-J2-Nqf" secondAttribute="width" id="fJ0-7j-HEJ"/>
+                            <constraint firstItem="3f4-J2-Nqf" firstAttribute="top" secondItem="47U-Se-1q7" secondAttribute="topMargin" id="pVi-bn-EUD"/>
+                            <constraint firstItem="Eco-FF-fWP" firstAttribute="top" secondItem="3f4-J2-Nqf" secondAttribute="bottom" id="qv1-vv-EzA"/>
+                            <constraint firstAttribute="height" secondItem="3f4-J2-Nqf" secondAttribute="height" id="zY9-nr-S4v"/>
                         </constraints>
                     </view>
                     <connections>
